# internal/main.go
@@ -154,7 +154,7 @@ func main() {
 	mux.HandleFunc("/api/matches", matchesHandler(matchLookup))
 	mux.HandleFunc("/api/matches/{id}", matchHandler(matchLookup))
 	mux.HandleFunc("/api/participants", participantsHandler(participantsLookup))
-	mux.HandleFunc("/api/participants/{id}", participantHandler(participantsLookup))
+	mux.HandleFunc("/api/participants/{name}", participantHandler(participantsLookup))
 	mux.HandleFunc("/api/tournament", tournamentHandler(participantsLookup))
 
 	fmt.Println("Listening on http://localhost:8080")
